--- a/src/app/shop/catalog/catalog.component.html
+++ b/src/app/shop/catalog/catalog.component.html
@@ -1,23 +1,31 @@
-<div class="row">
-    <div class="col-xs-12">
+<div class="container">
+    <div class="row">
         <a href="#" class="list-group-item clearfix" *ngFor="let unit of allItems">
-
-            <span>
-                <img src="{{unit.imagePath}}" class="img-responsive" style="max-height:250px;width:25%;float:left">
-            </span>
-
-            <div class="pull-left " style="max-height:250px;width:25%;float:left">
-                <h4 class="list-group-item-heading">{{unit.name}}</h4>
-                <p class="list-group-item-text">{{unit.description}}</p>
+            <div class="col-sm-3 col-md-6">
+                <div class="row">
+                    <div style="text-align: center;font: 400 2em/2 'Josefin Slab', serif;">{{unit.name}}<hr class="between" /></div>
+                    <div>
+                        <span>
+                            <img src="{{unit.imagePath}}" class="img-responsive"
+                                style="height:150px;width:50%;float:left">
+                        </span>
+                    </div>
+                </div>
             </div>
-
-            <div class="product-quantity"><input style="width: 15%;max-height:250px;float:left" type="number" value="1"
-                    min="1"></div>
-                    <button style="background-color: black;width:20%" type="button" class="btn btn-default btn-sm">
-                        <span class="glyphicon glyphicon-shopping-cart"
-                            style="width: 25%;max-height:250px;float:left;"></span> Add to Shopping Cart
-                    </button>
-                
+            <div class="panel-body">
+                <div class="row">
+                    <div class="col-sm-3 col-md-6" style="margin-top:25px;text-align:center;">
+                        <button style="background-color: grey;width:50%" type="button" class="btn btn-default btn-sm">
+                            <span class="glyphicon glyphicon-shopping-cart"
+                                style="width: 25%;max-height:250px;float:left;"></span>
+                            Add to Cart
+                        </button><hr class="between" />
+                    </div>
+               
+                    
+                   
+                </div>
+            </div>
         </a>
     </div>
 </div>
