--- a/src/app/shop/catalog/catalog.component.scss
+++ b/src/app/shop/catalog/catalog.component.scss
@@ -1,4 +1,18 @@
 .cellContainer {
-    width: 25%;
+    width: 5%;
     float: left;
+   
   }
+
+  .between {
+    border-style: 1px solid red;
+    margin-left:1px;
+    margin-right:11px;
+}
+
+.shoppingButton{
+    margin-top: 100px;
+    margin-bottom: 100px;
+    margin-right: 150px;
+    margin-left: 80px;
+}
