--- a/src/app/shop/catalog/catalog.component.html
+++ b/src/app/shop/catalog/catalog.component.html
@@ -1,9 +1,24 @@
+
+<div class="container">
+    <div class="row">
+      <div class="col-xs-12 col-sm-10 col-md-8 col-sm-offset-1 col-md-offset-2">
+        <ul class="nav nav-tabs">
+          <li role="presentation" class="active"><a href="#">All</a></li>
+          <li role="presentation"><a href="#">Servers</a></li>
+          <li role="presentation"><a href="#">Users</a></li>
+        </ul>
+      </div>
+    </div>
+    </div>
+
 <div class="container">
     <div class="row">
         <a href="#" class="list-group-item clearfix" *ngFor="let unit of allItems">
-            <div class="col-sm-3 col-md-6">
+            <div class="col-sm-3 col-md-4">
                 <div class="row">
-                    <div style="text-align: center;font: 400 2em/2 'Josefin Slab', serif;">{{unit.name}}<hr class="between" /></div>
+                    <div style="text-align: center;font: 400 2em/2 'Josefin Slab', serif;">{{unit.name}}
+                        <hr class="between" />
+                    </div>
                     <div>
                         <span>
                             <img src="{{unit.imagePath}}" class="img-responsive"
@@ -14,18 +29,23 @@
             </div>
             <div class="panel-body">
                 <div class="row">
-                    <div class="col-sm-3 col-md-6" style="margin-top:25px;text-align:center;">
-                        <button style="background-color: grey;width:50%" type="button" class="btn btn-default btn-sm">
-                            <span class="glyphicon glyphicon-shopping-cart"
-                                style="width: 25%;max-height:250px;float:left;"></span>
-                            Add to Cart
-                        </button><hr class="between" />
+                    <div class="col-sm-3 col-md-8" style="margin-top:25px;text-align:center;">
+                        <app-quantitydropdown></app-quantitydropdown>
+                        <app-sizedropdown appDropdown></app-sizedropdown>
+                        
+                        <hr class="between" />
                     </div>
-               
-                    
+
                    
+                    <button style="background-color: grey;width:20%" type="button" (click)="processClickOperation()" [disabled]="isButtonClicked" class="btn btn-default btn-sm">
+                        <span class="glyphicon glyphicon-shopping-cart"
+                            style="width: 25%;max-height:250px;float:left;"></span>
+                        Add to Cart
+                    </button>
+
                 </div>
             </div>
+
         </a>
     </div>
 </div>
