--- a/src/app/shop/header/header.component.html
+++ b/src/app/shop/header/header.component.html
@@ -1,24 +1,36 @@
-<head>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
-  </head>
-<div class="container">
-    <p>Menu <span style='color :blue' class="glyphicon glyphicon-align-justify"></span></p>    
-</div>
-<div class="container" >   
-    <span style="position: absolute;top:0;right:0;margin-top: 3ex; margin-right: 2ex;" class="glyphicon glyphicon-user" ></span> 
-</div>
-<div class="nav-wrapper" style="position: absolute;top:0;right:0;margin-top: 2ex; margin-right: 2ex;">
+
+
+<nav class="navbar navbar-default">
+  <div class="container.fluid">
+    <p>Menu <span style='color :blue' class="glyphicon glyphicon-align-justify"></span></p>
+  </div>
+  <div class="container">
+    <span style="position: absolute;top:0;right:0;margin-top: 3ex; margin-right: 2ex;"
+      class="glyphicon glyphicon-user"></span>
+  </div>
+
+  <div class="nav-wrapper">
+    <button type="button" style="position: absolute;top:2;right:0;margin-top: 1ex;margin-right: 8ex;">
+      <span class="glyphicon glyphicon-shopping-cart"></span>
+    </button>
+  </div>
+
+  <div class="nav-wrapper" style="position: absolute;top:0;right:0;margin-top: 2ex; margin-right: 2ex;">
     <div class="sl-nav">
       Sprache:
       <ul>
         <li><b>Deutsch</b> <i class="fa fa-angle-down" aria-hidden="true"></i><span class="caret"></span>
           <div class="triangle"></div>
           <ul>
-            <li><i class="sl-flag flag-de"><div id="germany"></div></i> <span class="active">Deutsch</span></li>
-            <li><i class="sl-flag flag-usa"><div id="germany"></div></i> <span>Englisch</span></li>
+            <li><i class="sl-flag flag-de">
+                <div id="germany"></div>
+              </i> <span class="active">Deutsch</span></li>
+            <li><i class="sl-flag flag-usa">
+                <div id="germany"></div>
+              </i> <span>Englisch</span></li>
           </ul>
         </li>
       </ul>
     </div>
   </div>
+</nav>
