--- a/src/app/shop/shop.component.html
+++ b/src/app/shop/shop.component.html
@@ -1,13 +1,17 @@
-<header >
-   
-    <div class=".header">
-        <h1>LaStrada</h1>
-        <app-header></app-header></div>
-  </header>
-<main class="main">
-    This is main body
-    <app-catalog></app-catalog>
-</main>
-  <footer>
-    <app-footer></app-footer>
-  </footer>
+<div class="header">
+  <app-header></app-header>
+</div>
+
+<div class="row">
+  <div class="leftcolumn">
+    <div class="card">
+      <h2>Search here </h2>
+      <h5>Title description, Dec 7, 2017</h5>
+      <div class="fakeimg" style="height:200px;">Image</div>
+      
+    </div>
+  </div>
+  <div class ="rightcolumn">
+    <div class="card">
+      <app-catalog></app-catalog>
+  </div>
