--- a/src/app/shop/shop.component.scss
+++ b/src/app/shop/shop.component.scss
@@ -1,50 +1,50 @@
-// Always be careful with margin collapsing (that's why I put padding on header and footer)
-
-$header-height: 5em;
-$footer-height: 5em;
-
 * {
   box-sizing: border-box;
 }
-html {
-  background:grey;
-  color: #333;
-  font: 300 100%/1.5 'Open Sans', sans-serif;
+
+.header {
+  padding: 30px;
+  text-align: center;
+  background: white;
+}
+.card {
+  background-color: white;
+  padding: 20px;
+  margin-top: 20px;
+}
+.leftcolumn {   
+  float: left;
+  width: 25%;
+}
+
+/* Fake image */
+.fakeimg {
+  background-color: #aaa;
+  width: 100%;
+  padding: 20px;
+}
+
+/* Right column */
+.rightcolumn {
+  float: left;
+  width: 75%;
+  overflow-x:hidden;
+  overflow-y:auto;
+  background-color: #f1f1f1;
+  padding-left: 10px;
  
 }
 
-header{
-  font-family: consolas;
-  border: 1px transparent #73AD21;
-}
-h1 {
-  margin: 0;
-  color:grey;
-  font: 700 2em/2 'Josefin Slab', serif;
-  text-align: center;
-  height: 20ex;
-  width:100%;
-  text-shadow: 0.05em 0.05em 0.1em rgba(0, 0, 0, 0.4);
-  border:turquoise;
-  background: url(https://images.pexels.com/photos/531880/pexels-photo-531880.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940);
-   background-repeat: no-repeat;
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
 }
 
-.main {
-  // This is where the magic happens.
-  min-height: calc(100vh - #{$header-height + $footer-height});
-  background: rgba(#fff, 0.5);
-  border: 1px solid black;
-}
-.footer {
-  height: $footer-height;
-  padding: 0.5em;
-  
-  p {
-    margin: 0.25em 0;
-    color: #fff;
-    font-size: 2em;
-    font-weight: 400;
-    text-align: center;
+/* Responsive layout - when the screen is less than 800px wide, make the two columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 800px) {
+  .leftcolumn, .rightcolumn {   
+    width: 100%;
+    padding: 0;
   }
 }
