--- a/src/app/shop/cart/cart.component.html
+++ b/src/app/shop/cart/cart.component.html
@@ -10,46 +10,26 @@
     <label class="product-removal">Remove</label>
     <label class="product-line-price">Total</label>
   </div>
-
+<div *ngFor="let orderedItem of orderedItems">
   <div class="product">
     <div class="product-image">
-      <img src="https://s.cdpn.io/3/dingo-dog-bones.jpg">
+      <img src={{orderedItem.imagePath}}>
     </div>
     <div class="product-details">
-      <div class="product-title">Dingo Dog Bones</div>
-      <p class="product-description">The best dog bones of all time. Holy crap. Your dog will be begging for these things! I got curious once and ate one myself. I'm a fan.</p>
+      <div class="product-title">{{orderedItem.name}}</div>
+      <p class="product-description">{{orderedItem.description}}</p>
     </div>
-    <div class="product-price">12.99</div>
+    <div class="product-price">{{orderedItem.price}}</div>
     <div class="product-quantity">
-      <input type="number" value="2" min="1">
+      <input type="number" value={{orderedItem.quantity}} min="1">
     </div>
     <div class="product-removal">
-      <button class="remove-product">
-        Remove
+      <button class="remove-product"><span class="glyphicon glyphicon-trash"></span>
       </button>
     </div>
     <div class="product-line-price">25.98</div>
   </div>
-
-  <div class="product">
-    <div class="product-image">
-      <img src="https://s.cdpn.io/3/large-NutroNaturalChoiceAdultLambMealandRiceDryDogFood.png">
-    </div>
-    <div class="product-details">
-      <div class="product-title">Nutro™ Adult Lamb and Rice Dog Food</div>
-      <p class="product-description">Who doesn't like lamb and rice? We've all hit the halal cart at 3am while quasi-blackout after a night of binge drinking in Manhattan. Now it's your dog's turn!</p>
-    </div>
-    <div class="product-price">45.99</div>
-    <div class="product-quantity">
-      <input type="number" value="1" min="1">
-    </div>
-    <div class="product-removal">
-      <button class="remove-product">
-        Remove
-      </button>
-    </div>
-    <div class="product-line-price">45.99</div>
-  </div>
+</div>
 
   <div class="totals">
     <div class="totals-item">
