--- a/src/app/shop/header/header.component.html
+++ b/src/app/shop/header/header.component.html
@@ -9,7 +9,7 @@
       class="glyphicon glyphicon-user"></span>
   </div>
 
-  <div class="nav-wrapper">
+  <div >
     <button type="button"
     class="btn btn-default btn-sm" [routerLink]="['/cart']" (click)="checkIfClickIsWorking()"
      style="position: absolute;top:2;right:0;margin-top: 1ex;margin-right: 8ex;"
