--- a/src/app/shop/cart/cart.component.html
+++ b/src/app/shop/cart/cart.component.html
@@ -27,7 +27,7 @@
       <button class="remove-product"><span class="glyphicon glyphicon-trash"></span>
       </button>
     </div>
-    <div class="product-line-price">25.98</div>
+    <div class="product-line-price">{{orderedItem.totalPrice}}</div>
   </div>
 </div>
 
