--- a/src/app/shop/cart/cart.component.html
+++ b/src/app/shop/cart/cart.component.html
@@ -19,37 +19,26 @@
       <div class="product-title">{{orderedItem.name}}</div>
       <p class="product-description">{{orderedItem.description}}</p>
     </div>
-    <div class="product-price">{{orderedItem.price}}</div>
+    <div class="product-price">{{orderedItem.unitPrice}}</div>
     <div class="product-quantity">
-      <input type="number" value={{orderedItem.quantity}} min="1">
+      <input type="number" (change)="changed($event,orderedItem)" value={{orderedItem.quantity}} min="1">
     </div>
     <div class="product-removal">
-      <button class="remove-product"><span class="glyphicon glyphicon-trash"></span>
+      <button class="remove-product" (click)="removeTheSelectedItem(orderedItem)"><span class="glyphicon glyphicon-trash"></span>
       </button>
     </div>
     <div class="product-line-price">{{orderedItem.totalPrice}}</div>
   </div>
 </div>
 
-  <div class="totals">
-    <div class="totals-item">
-      <label>Subtotal</label>
-      <div class="totals-value" id="cart-subtotal">71.97</div>
-    </div>
-    <div class="totals-item">
-      <label>Tax (5%)</label>
-      <div class="totals-value" id="cart-tax">3.60</div>
-    </div>
-    <div class="totals-item">
-      <label>Shipping</label>
-      <div class="totals-value" id="cart-shipping">15.00</div>
-    </div>
+
     <div class="totals-item totals-item-total">
       <label>Grand Total</label>
-      <div class="totals-value" id="cart-total">90.57</div>
+      <div class="totals-value" id="cart-total">{{totalPrice}}</div>
     </div>
-  </div>
+  
       
-      <button class="checkout">Checkout</button>
+      <button class="checkout">Bestellen</button>
 
-</div>
+      <button class="checkout">Abrechnen</button>
+    </div>
