--- a/src/app/shop/catalog/catalog-unit/catalog-unit.component.html
+++ b/src/app/shop/catalog/catalog-unit/catalog-unit.component.html
@@ -24,7 +24,7 @@
                         </a></li>
                 </ul>
             </div>
-            <div class="product-price">Preis :{{unit.unitPrice}}
+            <div class="product-price">Preis :{{unit.price}}
             </div>
             <hr class="between" />
         </div>
