--- a/src/app/shop/cart/cart.component.html
+++ b/src/app/shop/cart/cart.component.html
@@ -1,44 +1,1 @@
-<h1>Shopping Cart</h1>
-
-<div class="shopping-cart">
-
-  <div class="column-labels">
-    <label class="product-image">Image</label>
-    <label class="product-details">Product</label>
-    <label class="product-price">Price</label>
-    <label class="product-quantity">Quantity</label>
-    <label class="product-removal">Remove</label>
-    <label class="product-line-price">Total</label>
-  </div>
-<div *ngFor="let orderedItem of orderedItems">
-  <div class="product">
-    <div class="product-image">
-      <img src={{orderedItem.imagePath}}>
-    </div>
-    <div class="product-details">
-      <div class="product-title">{{orderedItem.name}}</div>
-      <p class="product-description">{{orderedItem.description}}</p>
-    </div>
-    <div class="product-price">{{orderedItem.unitPrice}}</div>
-    <div class="product-quantity">
-      <input type="number" (change)="changed($event,orderedItem)" value={{orderedItem.quantity}} min="1">
-    </div>
-    <div class="product-removal">
-      <button class="remove-product" (click)="removeTheSelectedItem(orderedItem)"><span class="glyphicon glyphicon-trash"></span>
-      </button>
-    </div>
-    <div class="product-line-price">{{orderedItem.totalPrice}}</div>
-  </div>
-</div>
-
-
-    <div class="totals-item totals-item-total">
-      <label>Grand Total</label>
-      <div class="totals-value" id="cart-total">{{totalPrice}}</div>
-    </div>
-  
-      
-      <button class="checkout">Bestellen</button>
-
-      <button class="checkout">Abrechnen</button>
-    </div>
+<p>cart works!</p>
