--- a/src/app/shop/shop.component.html
+++ b/src/app/shop/shop.component.html
@@ -1,17 +1,16 @@
-<div class="header">
-  <app-header></app-header>
-</div>
-
-<div class="row">
-  <div class="leftcolumn">
-    <div class="card">
-      <h2>Search here </h2>
-      <h5>Title description, Dec 7, 2017</h5>
-      <div class="fakeimg" style="height:200px;">Image</div>
-      
+<div class="container">
+  <div class="row">
+    <div class="header">
+      <app-header></app-header>
+    </div>
+    <div class="row">
+      <div class="col-sm-8 inset" style="border-style: outset" >
+      <div class="row">
+      <app-navbar></app-navbar>
+      </div>
+      <h3>here the components will be displayed</h3>
+      </div>
+      <div class="col-sm-4">this is a right section and fixed section</div>
     </div>
   </div>
-  <div class ="rightcolumn">
-    <div class="card">
-      <app-catalog></app-catalog>
-  </div>
+</div>
