--- a/src/app/shop/shop.component.scss
+++ b/src/app/shop/shop.component.scss
@@ -1,50 +1,18 @@
-* {
-  box-sizing: border-box;
-}
+
 
 .header {
-  padding: 30px;
+  background: #999;
   text-align: center;
-  background: white;
 }
-.card {
-  background-color: white;
-  padding: 20px;
-  margin-top: 20px;
+.right {
+	background: #999;
+	height: 500px;
+	position: fixed;
+	top: 110px;
+	right: 0px;
 }
-.leftcolumn {   
-  float: left;
-  width: 25%;
-}
-
-/* Fake image */
-.fakeimg {
-  background-color: #aaa;
-  width: 100%;
-  padding: 20px;
-}
-
-/* Right column */
-.rightcolumn {
-  float: left;
-  width: 75%;
-  overflow-x:hidden;
-  overflow-y:auto;
-  background-color: #f1f1f1;
-  padding-left: 10px;
- 
-}
-
-.row:after {
-  content: "";
-  display: table;
-  clear: both;
-}
-
-/* Responsive layout - when the screen is less than 800px wide, make the two columns stack on top of each other instead of next to each other */
-@media screen and (max-width: 800px) {
-  .leftcolumn, .rightcolumn {   
-    width: 100%;
-    padding: 0;
-  }
+.left {
+	margin-top: 110px;
+	background: #CCC;
+	min-height: 400px;
 }
