--- a/src/app/shop/shop.component.html
+++ b/src/app/shop/shop.component.html
@@ -8,7 +8,7 @@
       <div class="row">
       <app-navbar></app-navbar>
       </div>
-      <h3>here the components will be displayed</h3>
+      <router-outlet></router-outlet>
       </div>
       <div class="col-sm-4">this is a right section and fixed section</div>
     </div>
