--- a/src/app/shop/catalog/pizzagroup/pizzagroup.component.html
+++ b/src/app/shop/catalog/pizzagroup/pizzagroup.component.html
@@ -6,7 +6,7 @@
                 <p>{{item.pizzaDescription}}</p><br>
                 <p style="font-style: italic;">Wahl aus: Small, Ø 28cm, Normal, Ø 32cm oder Family, 46cm x 33cm,Party.
                 </p>
-                <p style="font-weight: bold;">{{item.pizzaPriceSmall}}€</p>
+                <p style="font-weight: bold;">{{item.pizzaPrice}}€</p>
             </div>
             <div class="col-sm-6">
                 <a *ngIf="!openDetailedWindow(i)" (click)="openCollapsedDetailWindow(i)">
@@ -27,9 +27,9 @@
                 <form (ngSubmit)="onSubmit()" #f='ngForm'>
                     <div class="form-group">
                         <span class="pull-left">{{item.pizzaName}}</span>
-                        <select id="size" class="form-control center-block" [ngModel]="defaultSize" name="size">
-                            <option *ngFor="let pizzaSize of allPizzaSizes;" value=pizzaSize selected="selected">
-                                {{pizzaSize}}</option>
+                        <select id="size" class="form-control center-block"  (change)='pizzaSizeSelected(allPizzaItems[i],$event)' ngModel name="pizzaSize">
+                            <option *ngFor="let pizzaSize of allPizzaSizes;" [value]="pizzaSize.name">
+                                {{pizzaSize.name}}</option>
                         </select>
                     </div>
                     <div class="form-group">
@@ -44,7 +44,7 @@
                         </div>
                     </div>
 
-                <div  >                  
+                <div class="pull-left" >                  
   <button type="button" (click)="decreaseTheNumber()" style="background-color: white;" class="btn btn-default btn-sm">
     <span class=" glyphicon glyphicon-minus"></span> 
   </button>
@@ -59,7 +59,7 @@
                     <button class="btn btn-primary " style="align-content: center;position:absolute;
                     bottom: 10px;
                     left: 50%;
-        margin-left: -104.5px;">{{item.pizzaPriceSmall}}€</button>
+        margin-left: -104.5px;">{{priceOnButton}}€</button>
                   </div>
                 </form>
 
