--- a/src/app/shop/catalog/pizzagroup/pizzaunit/pizzaunit.component.html
+++ b/src/app/shop/catalog/pizzagroup/pizzaunit/pizzaunit.component.html
@@ -25,7 +25,8 @@
         <form (ngSubmit)="onSubmit()" #f='ngForm'>
             <div class="form-group">
                 <span class="pull-left">{{pizza.pizzaName}}</span>
-                <select id="size" class="form-control center-block" #selectedPizzaSize (change)='pizzaSizeSelected(pizza,$event)'  [(ngModel)]="defaultSize"  name="pizzaSize">
+                <select id="size" class="form-control center-block" #selectedPizzaSize
+                    (change)='pizzaSizeSelected(pizza,$event)' [(ngModel)]="defaultSize" name="pizzaSize">
                     <option *ngFor="let pizzaSize of allPizzaSizes;" [value]="pizzaSize.name">
                         {{pizzaSize.name}}</option>
                 </select>
@@ -33,7 +34,8 @@
             <div class="form-group">
                 <span class="pull-left"> Ihre Extras:</span><br>
                 <div *ngFor="let pizzaAddition of allPizzaAdditions | slice:0:show;let i = index">
-                    <input type="checkbox" value=pizzaAddition name="pizzaaddition" ngModel (change)="fetchPriceForSelectedAddition(allPizzaAdditions[i],pizza, selectedPizzaSize,$event)" />
+                    <input type="checkbox" value=pizzaAddition name="pizzaaddition" ngModel
+                        (change)="fetchPriceForSelectedAddition(allPizzaAdditions[i],pizza, selectedPizzaSize,$event)" />
                     <span> mit {{pizzaAddition.nameOfAddition}}</span>
                     <span>({{displayPizzaAdditionPriceForSelectedPizzaSize(selectedPizzaSize,pizzaAddition.nameOfAddition)==0?pizzaAddition.price:displayPizzaAdditionPriceForSelectedPizzaSize(selectedPizzaSize,pizzaAddition.nameOfAddition)}}€)</span><br>
                     <a *ngIf="i==2 && show == 3" (click)="show = allPizzaAdditions.length">
@@ -42,27 +44,28 @@
                 </div>
             </div>
 
-        <div class="pull-left" >                  
-<button type="button" (click)="decreaseTheNumber(item)" style="background-color: white;" class="btn btn-default btn-sm">
-<span class=" glyphicon glyphicon-minus"></span> 
-</button>
-<button type="button"  style="background-color: white;" class="btn btn-default btn-sm">
-<label>{{selectedQuantity}}</label>
-</button>
-<button type="button"  (click)="increaseTheNumber(item)" style="background-color: white;" class="btn btn-default btn-sm">
-<span class="  glyphicon glyphicon-plus"></span>
-</button>
-        </div>
+            <div class="pull-left">
+                <button type="button" (click)="decreaseTheNumber(item)" style="background-color: white;"
+                    class="btn btn-default btn-sm">
+                    <span class=" glyphicon glyphicon-minus"></span>
+                </button>
+                <button type="button" style="background-color: white;" class="btn btn-default btn-sm">
+                    <label>{{selectedQuantity}}</label>
+                </button>
+                <button type="button" (click)="increaseTheNumber(item)" style="background-color: white;"
+                    class="btn btn-default btn-sm">
+                    <span class="  glyphicon glyphicon-plus"></span>
+                </button>
+            </div>
             <div class="form-group">
-            <button class="btn btn-primary " style="align-content: center;width: 25ex;position:absolute;
+                <button class="btn btn-primary" type="submit" style="align-content: center;width: 25ex;position:absolute;
             bottom: 10px;
             left: 50%;
 margin-left: -104.5px;">{{priceOnButton==0?pizza.pizzaPriceN :priceOnButton}}€</button>
-          </div>
+            </div>
         </form>
 
-      
+
     </div>
 
 </div>
-
