--- a/src/app/shop/shop.component.html
+++ b/src/app/shop/shop.component.html
@@ -10,7 +10,7 @@
       </div>
       <router-outlet></router-outlet>
       </div>
-      <div class="col-sm-4">this is a right section and fixed section</div>
+      <div class="col-sm-4"><app-cart></app-cart></div>
     </div>
   </div>
 </div>
