--- a/src/app/shop/catalog/cart/cart.component.scss
+++ b/src/app/shop/catalog/cart/cart.component.scss
@@ -8,3 +8,13 @@ margin-top: 1rem;
 margin-left:1rem;
 color:#7d7d7d;
     }
+
+
+.cart-row{
+display:flex;
+justify-content: flex-start;
+align-content: center;
+transform: translateZ(0);
+align-items:center;
+width:100%
+ }
