--- a/src/app/shop/catalog/cart/cart.component.html
+++ b/src/app/shop/catalog/cart/cart.component.html
@@ -1,56 +1,63 @@
 <div class="container-fluid" style="position:fixed;margin-right: 6ex;">
-<div class="row" >
-    <div class="text-center">
-        <span>WarenKorb</span>
-    </div>
-    <hr>
-    <div *ngIf="this.orderedItems.length < 1">
-        <p style="text-align: center;"><span class="glyphicon glyphicon-shopping-cart"></span></p> <br>
-        <span class="emptybucket">Wähle leckere Gerichte aus der Karte und bestelle Dein Menü.</span>
-    </div>
-    <div class="row cart-row" style="margin-left: 3rem;" *ngFor="let item of orderedItems">
-        <span>{{item.quantity}}x</span>
-
-        <span style="padding-left: 5ex;">{{item.name}}</span>
-        <div style="padding-left: 5ex;">
-            <button type="button"  style="background-color: white;"
-                class="btn btn-default btn-sm">
-                <span class=" glyphicon glyphicon-minus"></span>
-            </button>
-            <button type="button"  style="background-color: white;"
-                class="btn btn-default btn-sm">
-                <span class="  glyphicon glyphicon-plus"></span>
-            </button>
+    <div class="row" >
+        <div class="text-center">
+            <span>WarenKorb</span>
         </div>
-    
-      <span style="padding-left: 5ex;"> 
-        <a>
-          <span style="padding-left: 5ex;" class="glyphicon glyphicon-trash"></span>
-        </a>
-      </span>
-
-      <span style="padding-left: 2ex;margin-left: 2ex;">{{item.totalPrice}}€</span>
-    </div>
-    <hr>
-    <div class="row">
-        <span class="pull-left" style="margin-left: 3rem; color:#7d7d7d; font-size: 12px;">Zwischen Summe </span>
-        <span   style="color:#7d7d7d;"class="pull-right">{{totalSum}} €</span>
-    </div>
-    <div class="row">
-        <span class="pull-left" style="margin-left: 3rem;color:#7d7d7d;font-size: 12px;">Liferung Kosten </span>
-        <span class="pull-right" style="color:#7d7d7d;">2 €</span>
-    </div>
-
-    <div class="row">
-        <span class="pull-left" style="margin-left: 3rem;font-size: 15px;"><b>Gesamt </b></span>
-        <span class="pull-right">2 €</span>
-    </div>
-    <hr>
-    <div class="row" style="margin-left: 3rem;color:#7d7d7d;">
-    <span *ngIf= "orderCannotBeDelivered"> Leider kannst Du noch nicht bestellen. wir liefern erst ab einem Mindestbestellwert von 15,00 € (exkl. Lieferkosten)</span>
-    </div>
-    <div>
-    <button  style="margin-left:3rem;margin-right: -2px;"  [disabled]="this.orderedItems.length < 1" class="btn btn-primary btn-lg btn-block">Bestellen</button>
-    </div>
+        <hr>
+        <div *ngIf="this.orderedItems.length < 1">
+            <p style="text-align: center;"><span class="glyphicon glyphicon-shopping-cart"></span></p> <br>
+            <span class="emptybucket">Wähle leckere Gerichte aus der Karte und bestelle Dein Menü.</span>
+        </div>
+<div class="row cart-row" *ngFor="let item of orderedItems">
+    <div class="col-sm-1">
+    <span>{{item.quantity}}x</span>
 </div>
+<div class="col-sm-5">
+        <div class="row">
+    <span >{{item.name}}</span>
+    <span style="font-family: 'Courier New', Courier, monospace;font-style: italic;">({{item.size}})</span></div>
+    <div class="row">
+        <span style="font-family: 'Courier New', Courier, monospace;font-style: italic;">{{getOderAdditionsText(item)}}</span></div>
+</div>
+    <div  class="col-sm-4" style="align-content: center;">
+        <button type="button" (click)="decreaseQuantity(item)" style="background-color: white;" class="btn btn-default btn-sm">
+            <span class=" glyphicon glyphicon-minus"></span>
+        </button>
+        <button type="button" (click)="increaseQuantity(item)" style="background-color: white;" class="btn btn-default btn-sm">
+            <span class="  glyphicon glyphicon-plus"></span>
+        </button>
+    </div>
+    <div class="col-sm-1">
+    <span>
+        <a>
+            <span  (click)="deleteTheItemFromOrder(item)" class="glyphicon glyphicon-trash"></span>
+        </a>
+    </span>
+    </div>
+    <div class="col-sm-1 pull-right">
+    <span>{{item.totalPrice}}€</span>
+</div>
+</div>
+<hr>
+<div class="row">
+    <span class="pull-left" style="margin-left: 3rem; color:#7d7d7d; font-size: 12px;">Zwischen Summe </span>
+    <span style="color:#7d7d7d;" class="pull-right">{{totalSum}} €</span>
+</div>
+<div class="row" *ngIf="!orderCannotBeDelivered">
+    <span class="pull-left"   style="margin-left: 3rem;color:#7d7d7d;font-size: 12px;">Liferung Kosten </span>
+    <span class="pull-right" style="color:#7d7d7d;">2 €</span>
+</div>
+
+<div class="row">
+    <span class="pull-left" style="margin-left: 3rem;font-size: 15px;"><b>Gesamt </b></span>
+    <span class="pull-right">{{OrderSum}}€</span>
+</div>
+<hr>
+<div class="row" style="margin-left: 3rem;color:#7d7d7d;">
+    <span *ngIf="orderCannotBeDelivered"> Leider kannst Du noch nicht bestellen. wir liefern erst ab einem
+        Mindestbestellwert von 15,00 € (exkl. Lieferkosten)</span>
+</div>
+<div>
+    <button style="margin-left:3rem;margin-right: -2px;" [disabled]="this.orderedItems.length < 1"
+        class="btn btn-primary btn-lg btn-block">Bestellen</button>
 </div>
