working pizza component

--- a/src/app/shop/catalog/pizzagroup/pizzaunit/pizzaunit.component.html
+++ b/src/app/shop/catalog/pizzagroup/pizzaunit/pizzaunit.component.html
@@ -58,7 +58,7 @@
                 </button>
             </div>
             <div class="form-group">
-                <button class="btn btn-primary" type="submit" style="align-content: center;width: 25ex;position:absolute;
+                <button class="btn btn-primary" type="submit" (click)="onSubmit(i)" style="align-content: center;width: 25ex;position:absolute;
             bottom: 10px;
             left: 50%;
 margin-left: -104.5px;">{{priceOnButton==0?pizza.pizzaPriceN :priceOnButton}}€</button>
