--- a/src/app/shop/catalog/cart/cart.component.html
+++ b/src/app/shop/catalog/cart/cart.component.html
@@ -9,19 +9,20 @@
             <span class="emptybucket">Wähle leckere Gerichte aus der Karte und bestelle Dein Menü.</span>
         </div>
 <div class="row" *ngFor="let item of orderedItems;let i = index">
-    <div class="col-sm-2">
+    <div class="col-sm-1">
     <span>{{item.quantity}}</span>
-    <span  style="color:#7d7d7d; font-size: 10px;">x</span>
-        
+    <span  style="color:#7d7d7d; font-size: 10px;">x</span>       
 </div>
-<div class="col-sm-5">
+<div class="col-sm-4">
         <div class="row">
-    <span >{{item.name}}</span>
-    <span style="font-family: 'Courier New', Courier, monospace;font-style: italic;">({{item.size}})</span></div>
+    <span >{{item.name}}</span></div>
+        <div class="row">
+            <span style="font-family: 'Courier New', Courier, monospace;font-style: italic;">({{item.size}})</span>
+        </div>
     <div class="row">
-        <span style="font-family: 'Courier New', Courier, monospace;font-style: italic;">{{getOderAdditionsText(i)}}</span></div>
+        <span style="font-family: 'Courier New', Courier, monospace;font-style: italic;font-size: 12px;">{{getOderAdditionsText(i)}}</span></div>
 </div>
-    <div  class="col-sm-3" style="align-content: center;">
+    <div  class="col-sm-4" style="align-content: center;">
         <button type="button" (click)="decreaseQuantity(item)" style="background-color: white;" class="btn btn-default btn-sm">
             <span class=" glyphicon glyphicon-minus"></span>
         </button>
